# HashMapPro

./: .gitignore  CMakeLists.txt  README.md  v1.0.0.tar.gz.1
.github/workflows/: benchmark.yml  docs.yml  sanitizers.yml
benchmarks/: CMakeLists.txt  bench_access.cpp  bench_all.cpp  bench_constructor.cpp  bench_helper.h  bench_iterator.cpp  bench_lookup.cpp  bench_modifiers.cpp
benchmarks/baselines/: v1.0.0.json  v1.0.0.md
benchmarks/common/: export.h  framework.h  helper.h  macros.h
benchmarks/results/: benchmark_results.json  benchmark_results.md  regression_results.json  regression_results.md
benchmarks/suite/access/: access.cpp  element_access.cpp  iterator.cpp  lookup.cpp
benchmarks/suite/construction/: constructor.cpp
benchmarks/suite/core/: clear.cpp  erase.cpp  insert.cpp  modifiers.cpp  update.cpp
benchmarks/suite/lifecycle/: constructor.cpp  copy.cpp  destructor.cpp  move.cpp
benchmarks/suite/scaling/: load_factor.cpp  rehash.cpp  reserve.cpp
benchmarks/suite/utility/: capacity.cpp  iteration.cpp
cmake/: HashMapProConfig.cmake.in
docs/: Doxyfile  PACKAGING.md
examples/: CMakeLists.txt  example_basic.cpp  example_custom_hash.cpp  example_helper.h  example_iteration.cpp  example_lookup.cpp  example_modifiers.cpp
examples/suite/advanced/: bucket_inspection.cpp  copy_vs_move.cpp  rehash_growth.cpp  reuse_after_move.cpp
examples/suite/integration/: class_wrapping.cpp  const_correctness.cpp  stl_algorithms.cpp  vector_of_pairs.cpp
examples/suite/misuse/: end_dereference.cpp  missing_key.cpp  self_assignment.cpp  stale_iterator.cpp  use_after_move.cpp
examples/suite/patterns/: custom_hash.cpp  iteration.cpp  lookup.cpp  reserve_capacity.cpp  struct_values.cpp  word_counter.cpp
examples/suite/quickstart/: basic.cpp  lookup.cpp  modifiers.cpp
include/HashMapPro/: HashMap.h  HashMap.tpp  Iterator.h  Node.h
recipes/hashmappro/all/: conandata.yml  conanfile.py
tests/: CMakeLists.txt  test_access.cpp  test_all.cpp  test_capacity.cpp  test_constructor.cpp  test_helper.h  test_iterator.cpp  test_lookup.cpp  test_modifiers.cpp
tests/common/: framework.h
tests/suite/concurrency/: concurrent_read_only.cpp  mutex_guarded_writes.cpp  thread_local_instances.cpp
tests/suite/integration/: cache_usage_pattern.cpp  custom_hash_workflow.cpp  insert_erase_iterate.cpp  rehash_during_iteration.cpp  reserve_then_update.cpp
tests/suite/lifecycle/: construct_destroy_cycle.cpp  exception_safe_clone.cpp  move_chain_owners.cpp  nested_map_lifetime.cpp  repeated_move_reuse.cpp
tests/suite/regression/: erase_last_node.cpp  hash_collision_chain.cpp  power_of_two_rounding.cpp  rehash_threshold_boundary.cpp  sparse_bucket_iteration.cpp  zero_bucket_construction.cpp
tests/suite/unit/: access.cpp  capacity.cpp  constructor.cpp  iterator.cpp  lookup.cpp  modifiers.cpp
tools/regression/: export.h  helper.h
vcpkg/ports/hashmappro/: portfile.cmake  vcpkg.json
